# Noita-Synchronise-Expansive-Worlds

./: .clang-format  .gitignore  .lua-format  .luacheckrc  CMakeLists.txt  README.md  config.ld  index.html  run-clang-format.sh
.github/workflows/: build.yml  documentation.yml
NSEW/: init.lua  mod.xml
NSEW/files/: magic_numbers.xml
examples/client/: CMakeLists.txt
examples/client/nsew_client/: init.lua
examples/server/: CMakeLists.txt  main.cpp
external_map/: main.cpp
modules/: nsew.game_patch.html  nsew.load.html  nsew.native_dll.html  nsew.rect.html  nsew.world.html  nsew.world_ffi.html
native/: CMakeLists.txt  rectangle_optimiser.cpp
native/include/nsew/: rectangle_optimiser.hpp
native/tests/: CMakeLists.txt  rectopt.cpp
nsew/: CMakeLists.txt  game_patch.lua  game_pause_patch.cpp  load.lua  noita_ffi.lua  world.lua  world_ffi.lua
nsew_client/: CMakeLists.txt
nsew_client/nsew_client/: init.lua
packaging/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
test/: load_luasocket.lua
topics/: LICENSE.md.html  README.md.html
